--- a/src/DevIO.App/Views/Produtos/Edit.cshtml
+++ b/src/DevIO.App/Views/Produtos/Edit.cshtml
@@ -1,21 +1,21 @@
 ﻿@model DevIO.App.ViewModels.ProdutoViewModel
 
 @{
-    ViewData["Title"] = "Editar" + Model.Nome;
+    ViewData["Title"] = "Editar " + Model.Nome;
 }
 
-<h3 style="padding-top: 30px">@ViewData["Title"]</h3>
+<h4 style="padding-top: 30px">@ViewData["Title"] </h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-10">
         <form enctype="multipart/form-data" asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            
+
             <input type="hidden" asp-for="Id" />
-           
+
             <div class="form-group">
-                <label asp-for="Fornecedor.Id" class="control-label">Fornecedor: </label>
-                <label><b>@Model.Fornecedor.Nome</b></label>                
+                <label asp-for="FornecedorId" class="control-label"></label><br />
+                <label><b>@Model.Fornecedor.Nome</b></label>
             </div>
 
             <div class="form-group">
@@ -30,17 +30,18 @@
             </div>
             <div class="form-group">
                 <label>Imagem Atual</label><br />
-                <img src="~/Imagens/@Model.Imagem" alt="@Model.Imagem" style="width: 70px; height: 100px" />               
+                <img src="~/imagens/@Model.Imagem" alt="@Model.Imagem" style="width: 70px; height: 100px" />
             </div>
+
             <div class="form-group">
                 <label asp-for="ImagemUpload" class="control-label"></label>
                 <div class="custom-file">
-                    <input type="file" class="custom-file-input" id="ImagemUpload" asp-for="ImagemUpload" />
-                    <label data-browse="Procurar" style="width: 350px" class="custom-file-label" for="ImagemUpload"></label>
+                    <input type="file" class="custom-file-input" id="ImagemUpload" asp-for="ImagemUpload">
+                    <label data-browse="Procurar" style="width: 400px" class="custom-file-label" for="ImagemUpload"></label>
                     <label style="display: none" id="img_nome"></label>
                 </div>
-                <span asp-validation-for="ImagemUpload" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Valor" class="control-label"></label>
                 <input asp-for="Valor" class="form-control" />
@@ -63,14 +64,11 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 
-<script>
+
+    <script>
         $("#ImagemUpload").change(function () {
             $("#img_nome").text(this.files[0].name);
             $("#img_nome")[0].style.display = 'block';
         });
-
-        $("#ImagemUpload").attr("data-val", "true");
-        $("#ImagemUpload").attr("data-val-required", "Preencha o campo Imagem.")
-
-</script>
+    </script>
 }
