--- a/src/DevIO.App/Views/Produtos/Delete.cshtml
+++ b/src/DevIO.App/Views/Produtos/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DevIO.App.ViewModels.ProdutoViewModel
 
 @{
-    ViewData["Title"] = "Excluir";
+    ViewData["Title"] = "Excluir " + Model.Nome;
 }
 
 <h4 style="padding-top: 50px">@ViewData["Title"] </h4>
