--- a/src/DevIO.App/Views/Fornecedores/Edit.cshtml
+++ b/src/DevIO.App/Views/Fornecedores/Edit.cshtml
@@ -4,34 +4,35 @@
     ViewData["Title"] = "Editar Fornecedor";
 }
 
-<h3 style="padding-top: 30px">@ViewData["Title"]</h3>
+<h1>@ViewData["Title"]</h1>
 
 <hr />
 
 <form asp-action="Edit">
 
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <vc:Summary></vc:Summary>
 
     <input type="hidden" asp-for="Id" />
 
     <div class="form-row">
         <div class="form-group col-md-6">
-            <label asp-for="Nome" class="control-label"></label>
+
+            <label asp-for="Nome"></label>
             <input asp-for="Nome" class="form-control" />
             <span asp-validation-for="Nome" class="text-danger"></span>
 
-
-            <label asp-for="Documento" class="control-label"></label>
+            <label asp-for="Documento"></label>
             <input asp-for="Documento" class="form-control" />
             <span asp-validation-for="Documento" class="text-danger"></span>
+
         </div>
 
-
         <div class="form-group col-md-6">
-            <label asp-for="TipoFornecedor" class="control-label"></label>
+
+            <label asp-for="TipoFornecedor"></label>
             <div>
-                <input type="radio" value="1" asp-for="TipoFornecedor" checked="@(Model.TipoFornecedor == 1)" />Pessoa Física
-                <input type="radio" value="2" asp-for="TipoFornecedor" checked="@(Model.TipoFornecedor == 2)" />Pessoa Jurídica
+                <input type="radio" value="1" asp-for="TipoFornecedor" checked="@(Model.TipoFornecedor == 1)" /> Pessoa Física
+                <input type="radio" value="2" asp-for="TipoFornecedor" checked="@(Model.TipoFornecedor == 2)" /> Pessoa Jurídica
             </div>
             <div>
                 &nbsp;
@@ -42,8 +43,9 @@
                 </label>
             </div>
         </div>
-
     </div>
+
+
     <div class="form-group">
         <input type="submit" value="Salvar" class="btn btn-primary" />
     </div>
@@ -55,11 +57,9 @@
 
 <hr />
 <h4>Produtos</h4>
-
 <div>
     <partial name="../Produtos/_ListaProdutos" model="@Model.Produtos" />
 </div>
-
 
 <div id="myModal" class="modal fade in">
     <div class="modal-dialog">
@@ -68,7 +68,6 @@
         </div>
     </div>
 </div>
-
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
