--- a/src/DevIO.App/Views/Produtos/Create.cshtml
+++ b/src/DevIO.App/Views/Produtos/Create.cshtml
@@ -1,20 +1,23 @@
 ﻿@model DevIO.App.ViewModels.ProdutoViewModel
 
 @{
-    ViewData["Title"] = "Cadastro de Produtos";
+    ViewData["Title"] = "Novo Produto";
 }
 
-<h3 style="padding-top: 50px"> @ViewData["Title"]</h3>
+<h3 style="padding-top: 50px">@ViewData["Title"] </h3>
+
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-10">
         <form enctype="multipart/form-data" asp-action="Create">
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="FornecedorId" class="control-label"></label>
                 <select asp-for="FornecedorId" class="form-control" asp-items="@(new SelectList(Model.Fornecedores, "Id", "Nome"))">
                     <option></option>
                 </select>
+
                 <span asp-validation-for="FornecedorId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -24,16 +27,18 @@
             </div>
             <div class="form-group">
                 <label asp-for="Descricao" class="control-label"></label>
-                <input asp-for="Descricao" class="form-control" />
+                <textarea cols="40" rows="5" asp-for="Descricao" class="form-control"></textarea>
                 <span asp-validation-for="Descricao" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ImagemUpload" class="control-label"></label>
+
                 <div class="custom-file">
-                    <input type="file" class="custom-file-input" id="ImagemUpload" asp-for="ImagemUpload" />
-                    <label data-browse="Procurar" style="width: 350px" class="custom-file-label" for="ImagemUpload"></label>
+                    <input type="file" class="custom-file-input" id="ImagemUpload" asp-for="ImagemUpload">
+                    <label data-browse="Procurar" style="width: 400px" class="custom-file-label" for="ImagemUpload"></label>
                     <label style="display: none" id="img_nome"></label>
                 </div>
+
                 <span asp-validation-for="ImagemUpload" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -57,6 +62,7 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
     <script>
         $("#ImagemUpload").change(function () {
             $("#img_nome").text(this.files[0].name);
@@ -64,7 +70,6 @@
         });
 
         $("#ImagemUpload").attr("data-val", "true");
-        $("#ImagemUpload").attr("data-val-required", "Preencha o campo Imagem.")
-
+        $("#ImagemUpload").attr("data-val-required", "Preencha o campo Imagem");
     </script>
 }
