--- a/src/DevIO.App/Views/Produtos/_ListaProdutos.cshtml
+++ b/src/DevIO.App/Views/Produtos/_ListaProdutos.cshtml
@@ -1,11 +1,10 @@
 ﻿@model IEnumerable<DevIO.App.ViewModels.ProdutoViewModel>
 
-
 <table class="table table-hover">
     <thead class="thead-dark">
         <tr>
             <th>
-               
+
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Nome)
@@ -27,7 +26,7 @@
         {
             <tr>
                 <td>
-                    <img src="~/Imagens/@item.Imagem" alt="@item.Imagem" style="width: 70px; height: 100px" />
+                    <img src="~/imagens/@item.Imagem" alt="@item.Imagem" style="width: 70px; height: 100px" />
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Nome)
@@ -41,11 +40,10 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Ativo)
                 </td>
-
                 <td class="text-right">
-                    <a class="btn btn-info" asp-controller="Produtos" asp-action="Details" asp-route-id="@item.Id"><span class="fa fa-search"></span></a>
-                    <a class="btn btn-success" asp-controller="Produtos" asp-action="Edit" asp-route-id="@item.Id"><span class="fa fa-pencil-alt"></span></a>
-                    <a class="btn btn-danger" asp-controller="Produtos" asp-action="Delete" asp-route-id="@item.Id"><span class="fa fa-trash"></span></a>
+                    <a class="btn btn-warning" asp-controller="Produtos" asp-action="Details" asp-route-id="@item.Id"><spam class="fa fa-search"></spam> </a>
+                    <a disable-by-claim-name="Produto" disable-by-claim-value="Editar" class="btn btn-info" asp-controller="Produtos" asp-action="Edit" asp-route-id="@item.Id"><spam class="fa fa-pencil-alt"></spam> </a>
+                    <a disable-by-claim-name="Produto" disable-by-claim-value="Excluir" class="btn btn-danger" asp-controller="Produtos" asp-action="Delete" asp-route-id="@item.Id"><spam class="fa fa-trash"></spam> </a>
                 </td>
             </tr>
         }
